--- a/web/style.css
+++ b/web/style.css
@@ -74,6 +74,9 @@
     display: block;
     margin:15px;
     padding:10px;
+    font-weight: bolder;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
 }
 
 .stockList:hover{
